--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2306,18 +2306,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -3164,6 +3164,12 @@ del {
 		height: 9.4em;
 		margin: 0 -0.10em -0.95em -0.75em;
 		filter: none;
+	}
+	
+	@media all and (max-width: 1199px) {
+		p.graphical-drop-cap img.drop-cap {
+			margin-top: -0.25em;
+		}
 	}
 }
 
@@ -5226,14 +5232,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5374,7 +5380,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5829,14 +5835,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6739,7 +6745,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#question');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7305,7 +7311,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1697940768#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1698021605#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7380,7 +7386,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 .markdownBody span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#hand-point-right-regular');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
