Refactor drop-cap implementation and fix punctuation bugs

--- a/css/colors-dark-GENERATED.css
+++ b/css/colors-dark-GENERATED.css
@@ -176,6 +176,7 @@
 
     /*  Drop caps.
      */
+    --GW-drop-caps-goudy-color: #fff;
     --GW-drop-caps-yinit-color: #f9f9f9;
     --GW-drop-caps-yinit-text-shadow-color: #a6a6a6;
     --GW-drop-caps-de-zs-color: #efefef;
