--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -177,6 +177,7 @@
 
     /*  Drop caps.
      */
+    --GW-drop-caps-goudy-color: #000;
     --GW-drop-caps-yinit-color: #0d0d0d;
     --GW-drop-caps-yinit-text-shadow-color: #777;
     --GW-drop-caps-de-zs-color: #1b1b1b;
@@ -506,6 +507,7 @@
 
     /*  Drop caps.
      */
+    --GW-drop-caps-goudy-color: #fff;
     --GW-drop-caps-yinit-color: #f9f9f9;
     --GW-drop-caps-yinit-text-shadow-color: #a6a6a6;
     --GW-drop-caps-de-zs-color: #efefef;
@@ -911,6 +913,6 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1699314000">
-<script src="/static/js/head.js?v=1699313999"></script>
+<link rel="stylesheet" href="/static/css/head.css?v=1699398078">
+<script src="/static/js/head.js?v=1699398078"></script>
 <link rel="preload" href="/static/img/icon/icons.svg?v=1699157525" as="image">
