--- a/include/inlined-standalone.html
+++ b/include/inlined-standalone.html
@@ -177,6 +177,7 @@
 
     /*  Drop caps.
      */
+    --GW-drop-caps-goudy-color: #000;
     --GW-drop-caps-yinit-color: #0d0d0d;
     --GW-drop-caps-yinit-text-shadow-color: #777;
     --GW-drop-caps-de-zs-color: #1b1b1b;
@@ -327,5 +328,5 @@
 	--GW-checkerboard-scrollbar-hover-background-image: var(--GW-image-checkerboard-000-fff-2x-gif);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1699314000">
-<link rel="stylesheet" href="/static/css/style.css?v=1699314000">
+<link rel="stylesheet" href="/static/css/head.css?v=1699398078">
+<link rel="stylesheet" href="/static/css/style.css?v=1699398078">
