--- a/css/light-mode-GENERATED.css
+++ b/css/light-mode-GENERATED.css
@@ -176,6 +176,7 @@
 
     /*  Drop caps.
      */
+    --GW-drop-caps-goudy-color: #000;
     --GW-drop-caps-yinit-color: #0d0d0d;
     --GW-drop-caps-yinit-text-shadow-color: #777;
     --GW-drop-caps-de-zs-color: #1b1b1b;
