Slightly tweak styling of popin stack counter

--- a/css/colors-dark-GENERATED.css
+++ b/css/colors-dark-GENERATED.css
@@ -262,6 +262,7 @@
     --GW-popins-popin-scrollbar-thumb-color: #5c5c5c;
     --GW-popins-popin-scrollbar-thumb-hover-color: #8b8b8b;
     --GW-popins-popin-stack-counter-text-color: #000;
+    --GW-popins-popin-stack-counter-background-color: #6c6c6c;
 
     /*  Image focus.
      */
