--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -263,6 +263,7 @@
     --GW-popins-popin-scrollbar-thumb-color: #ccc;
     --GW-popins-popin-scrollbar-thumb-hover-color: #999;
     --GW-popins-popin-stack-counter-text-color: #fff;
+    --GW-popins-popin-stack-counter-background-color: #bbb;
 
     /*  Image focus.
      */
@@ -593,6 +594,7 @@
     --GW-popins-popin-scrollbar-thumb-color: #5c5c5c;
     --GW-popins-popin-scrollbar-thumb-hover-color: #8b8b8b;
     --GW-popins-popin-stack-counter-text-color: #000;
+    --GW-popins-popin-stack-counter-background-color: #6c6c6c;
 
     /*  Image focus.
      */
@@ -913,6 +915,6 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1699481472">
-<script src="/static/js/head.js?v=1699481472"></script>
+<link rel="stylesheet" href="/static/css/head.css?v=1699483444">
+<script src="/static/js/head.js?v=1699483444"></script>
 <link rel="preload" href="/static/img/icon/icons.svg?v=1699481093" as="image">
