--- a/css/light-mode-GENERATED.css
+++ b/css/light-mode-GENERATED.css
@@ -262,6 +262,7 @@
     --GW-popins-popin-scrollbar-thumb-color: #ccc;
     --GW-popins-popin-scrollbar-thumb-hover-color: #999;
     --GW-popins-popin-stack-counter-text-color: #fff;
+    --GW-popins-popin-stack-counter-background-color: #bbb;
 
     /*  Image focus.
      */
