--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2309,18 +2309,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699481093#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699191185#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699481093#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699191185#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699481093#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699191185#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699481093#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1699191185#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5241,14 +5241,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699481093#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699191185#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699481093#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699191185#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5389,7 +5389,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1699481093#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699191185#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5850,14 +5850,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699481093#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699191185#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699481093#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699191185#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6760,7 +6760,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1699481093#question');
+    background-image: url('/static/img/icon/icons.svg?v=1699191185#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7326,7 +7326,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1699481093#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1699191185#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7401,7 +7401,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 .markdownBody span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1699481093#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699191185#hand-point-right-regular');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
@@ -8635,6 +8635,13 @@ a[data-link-icon='audio-waveform-lines'] .link-icon-hook::after { /* Radiolab */
 }
 
 a[data-link-icon='emacs'] .link-icon-hook::after {
+    opacity: 0.65;
+}
+
+
+a[data-link-icon='chicago-tribune'] .link-icon-hook::after { /* fraktur C */
+    --link-icon-offset-x: 0.10em;
+    --link-icon-offset-y: 0.20em;
     opacity: 0.65;
 }
 
